--- a/mine.html
+++ b/mine.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no minimal-ui">
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>扫雷</title>
 	<style>
 		*{
 			margin: 0;
