--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		//初始化
 		function init(){
 			var str = '';
-			for(i=0; i<100; i++){
+			for(i=0; i<row*col; i++){
 				str += '<span></span>';
 			}
 			document.querySelector('.wrap').innerHTML = str;
